<resources>
    <string name="app_name">Easy Shave</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
        <![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]>
	</string>
    <string name="about_dialog_title">Livro Android</string>

    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>

    <!-- F -->
    <string name="facebook_app_id">1329646183855578</string>
    <string name="fb_login_protocol_scheme">fb1329646183855578</string>


    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <string name="textoTermos">Li e concordo com os
        <b>
            <u>termos de uso</u>
        </b>
        e políticas de privacidade
    </string>

    <!-- M -->
    <string name="mapa">Mapa</string>

    <!-- N -->
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site do Livro</string>

    <!-- V -->
    <string name="vazio"/>
    <string name="video">Vídeo</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Carregando</string>
    <string name="imglogo">ImgLogo</string>
    <string name="imgblur">ImgBlur</string>
    <string name="newVersionText">Há uma nova versão disponível.</string>
    <string name="btnUpdateText">ATUALIZAR</string>
    <string name="btnTryAgain">TENTAR NOVAMENTE</string>
    <string name="btnSkipText">Pular</string>
    <string name="tvEnterUsing">Entrar Usando:</string>
    <string name="FacebookBtn">Facebook</string>
    <string name="EmailBtn">E-mail</string>
    <string name="text_back">Voltar</string>
    <string name="text_recover_account">Recuperar Senha</string>
    <string name="text_create_account">Criar Conta</string>
    <string name="text_enter_using_email">ENTRAR COM E-MAIL</string>
    <string name="text_continue_login">CONTINUAR</string>
    <string name="txtEmailLogin">E-mail</string>
    <string name="txtLoginPassword">Senha</string>
    <string name="hintUserName">Nome</string>
    <string name="text_create_new_account">Criar Nova Conta</string>
    <string name="hintCPF">CPF</string>
    <string name="txtLoginPasswordConfirm">Confirmar Senha</string>
    <string name="txtContactPhone">Celular</string>
    <string name="txtRegisterInformation">Ao Registrar você aceita nossos <b>Termos de Uso</b> e
        <b>Política de Privacidade.</b>
    </string>
    <string name="register">Registrar</string>
    <string name="brazilAreaCode">+55</string>
    <string name="text_send">Enviar</string>
    <string name="complete_profile">COMPLETAR PERFIL</string>
    <string name="text_continue">CONTINUAR</string>
    <string name="CPFMask">###.###.###-##</string>
    <string name="PhoneContactMask">(##)#####-####</string>
    <string name="play">Jogar</string>
    <string name="profile">Perfil</string>
    <string name="bank">Banco</string>
    <string name="tutorial">Tutorial</string>
    <string name="entrar">Entrar</string>
    <string name="esqueciSenha">Esqueci minha senha.</string>
    <string name="cadastro">Ainda não tem cadastro? Criar uma conta.</string>
    <string name="textoCadastrrar">Cadastrar</string>
    <string name="desenvolvidoPor">Desenvolvido por USJT</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="minha_agenda">Minha Agenda</string>
    <string name="menu_sugestoes">Sugestões</string>
    <string name="menu_gerenciar">Meus Serviços.</string>
    <string name="menu_compartilhar">Compartilhar</string>
    <string name="menu_sair">Sair</string>
    <string name="BuscarServico">Buscar Serviços.</string>

</resources>
