<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_agenda_perfil_usuario"
                android:icon="@drawable/ic_view_agenda_black_24dp"
                android:title="Agenda - Usuários agendados"/>
        <item
                android:id="@+id/nav_agenda_perfil_estabelecimento"
                android:icon="@drawable/ic_view_agenda_black_24dp"
                android:title="Agenda - Serviços Agendados"/>

        <item
                android:id="@+id/nav_serviços_perfil_estabelecimento"
                android:icon="@drawable/ic_menu_manage"
                android:title="Gerenciar Serviços"/>

        <item
                android:id="@+id/nav_buscar_servicos."
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/BuscarServico"/>


        <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_person_outline_black_24dp"
                android:title="@string/meu_perfil"/>
        <item
                android:id="@+id/nav_sair_perfil"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_sair"/>
    </group>

</menu>
