<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".activity.RegisterActivities.ConnectionErrorActivity">


    <ImageView
            android:src="@drawable/img_bg_wide"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintVertical_bias="0.0"/>


    <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/imglogo"
            app:srcCompat="@drawable/ic_smplay_svg_logo"
            android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"/>

    <ImageView
            android:layout_width="328dp"
            android:layout_height="356dp"
            android:contentDescription="@string/imgblur"
            app:srcCompat="@drawable/imgblur"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/imageView2"/>
    <TextView

            android:text="@string/newVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/tvNewVersionText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/helveticaneue" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
    />
    <TextView

            android:text="@string/btnSkipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/btnSkipUpdate"
            android:textSize="14dp"
            android:fontFamily="@font/helveticaneue"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
            app:layout_constraintStart_toStartOf="@+id/btnUpdate" app:layout_constraintEnd_toEndOf="@+id/btnUpdate"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/tvVersionText"
            android:fontFamily="@font/helveticaneue"
            app:layout_constraintStart_toStartOf="@+id/imgLogo" app:layout_constraintEnd_toEndOf="@+id/imgLogo"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>
    <Button
            android:text="@string/btnUpdateText"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_rouded"
            android:id="@+id/btnUpdate"
            android:backgroundTint="@color/btnStandardColor"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNewVersionText"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.45"/>


</android.support.constraint.ConstraintLayout>