<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".activity.RegisterActivities.RecoverPassword">


    <ImageView
            android:src="@drawable/img_bg_wide"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView"/>

    <TextView

            android:text="@string/text_back"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBackNavication3"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginStart="24dp"/>


    <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/imglogo"
            app:srcCompat="@drawable/ic_smplay_svg_logo"
            android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="@+id/imgBgBlur"
            app:layout_constraintEnd_toEndOf="@+id/imgBgBlur"
            app:layout_constraintTop_toTopOf="@+id/imgBgBlur"
            app:layout_constraintBottom_toBottomOf="@+id/imgBgBlur"
            app:layout_constraintVertical_bias="0.35000002"/>

    <ImageView
            android:layout_width="328dp"
            android:layout_height="356dp"
            android:contentDescription="@string/imgblur"
            app:srcCompat="@drawable/imgblur"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/imgBgBlur"/>

    <TextView
            android:text="@string/text_recover_account"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="@font/avenirnextregular"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEnterUsingEmail"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.CardView
            android:layout_width="315dp"
            android:layout_height="163dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/bgCardViewColor"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.587"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterUsingEmail">



        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/textLayout"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/textInputRecover">

                <EditText
                        android:id="@+id/edtRecoverEmail"
                        style="@style/edtLoginDefault"
                        android:fontFamily="@font/avenirnextregular"
                        android:hint="@string/txtEmailLogin"
                        android:inputType="textEmailAddress"
                        android:textSize="12sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:text="@string/text_send"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="@dimen/btn_height"
                    android:id="@+id/btnRecoverPassword"
                    android:background="@drawable/btn_standard"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/avenirnextbold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>



        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>