<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".activity.RegisterActivities.CompleteProfile">


    <ImageView
            android:src="@drawable/img_bg_wide"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView"/>


    <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/imglogo"
            app:srcCompat="@drawable/ic_smplay_svg_logo"
            android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="@+id/imgBgBlur"
            app:layout_constraintEnd_toEndOf="@+id/imgBgBlur"
            app:layout_constraintTop_toTopOf="@+id/imgBgBlur"
            app:layout_constraintBottom_toBottomOf="@+id/imgBgBlur"
            app:layout_constraintVertical_bias="0.35000002"/>

    <ImageView
            android:layout_width="328dp"
            android:layout_height="356dp"
            android:contentDescription="@string/imgblur"
            app:srcCompat="@drawable/imgblur"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/imgBgBlur"/>

    <TextView
            android:text="@string/complete_profile"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/avenirnextregular"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEnterUsingEmail"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    <android.support.v7.widget.CardView
            android:layout_width="315dp"
            android:layout_height="349dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/bgCardViewColor"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterUsingEmail" android:layout_marginTop="8dp">


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>