<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".activity.RegisterActivities.CreateAccount">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/circular_white"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="82dp"
            android:layout_height="82dp"
            app:srcCompat="@drawable/ic_salon"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"/>


    <TextView

            android:text="@string/text_back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBackNavigation2"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView

            android:text="@string/text_create_new_account"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tvCreateNewAccountTitle"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtUserNameSignUp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:hint="Nome Completo"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateNewAccountTitle"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="datetime"
            android:ems="10"
            android:editable="false"
            android:id="@+id/edtUserBirthDate"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:hint="Data de Nascimento"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserNameSignUp"/>


    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtUserEmailSignUp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:hint="E-Mail"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserBirthDate"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtUserSignUpPass1"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:hint="Senha"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserEmailSignUp"/>


    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtUserSignUpPass2"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:hint="Confirmar Senha"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edtUserSignUpPass1"/>

    <CheckBox
            android:text="@string/textoTermos"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserSignUpPass2"
            app:layout_constraintEnd_toEndOf="@+id/edtUserSignUpPass2"
            app:layout_constraintStart_toStartOf="@+id/edtUserSignUpPass2"/>

    <Button
            android:text="@string/textoCadastrrar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="@+id/checkBox" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>